# voice-emotion-recognition

./: .gitignore  AGENTS.md  COURSE_REPORT.md  README.md  pyproject.toml  requirements.txt
artifacts/reports/: ser_1050ti_quality_test.txt  ser_resnet_gpu_5ep_v2_test.txt  ser_resnet_gpu_5ep_v2_val.txt
demo/: app.py
docs/screenshots/: README.md
src/: __init__.py  config.py
src/data/: __init__.py  build_manifest.py  dataset.py  manifest.py  preprocessing.py
src/features/: __init__.py  audio_features.py
src/inference/: __init__.py  predict.py
src/models/: cnn_model.py  mel_frontend.py  mlp_model.py
src/runtime/: device.py
src/training/: __init__.py  evaluate.py  feature_config.py  metrics.py  train.py
