[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-emotion-recognition"
version = "0.1.0"
description = "Speech emotion recognition on Dusha (Crowd)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
